Added error notification for 'user' and 'document' services

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -66,10 +66,8 @@ noti.internal.error=Please notify the administrator.<br/>take note of any unsave
 noti.cookies.disabled.caption=Cookies disabled
 noti.cookies.disabled=This application requires cookies to function.<br/>please enable cookies in your browser and <u>click here</u> or press esc to try again.
 
-noti.login.error=Authorization error
+noti.login.error=Login error
 noti.login.invalid=Login and password can't be empty
-noti.login.connect.error=Authorization connect error
-
 noti.entity.title.empty.validate=Field "Title" field could not be empty
 noti.entity.title.unique.validate=Field "Title" could not be duplicated
 
@@ -78,3 +76,11 @@ noti.document.template.validate=Choose document template
 noti.template.fields.required=Template could not be empty
 noti.template.field.title.unique.validate=Value of field "Field title" could not be duplicated
 noti.template.fields.all.required=All fields are required
+noti.login.failed=Check the username and password
+noti.document.get.error=Documents reading error
+noti.document.field.get.error=Document's fields reading error
+noti.document.update.error=Document updating error
+noti.document.create.error=Document creation error
+noti.document.remove.error=Document removing error
+noti.template.get.error=Templates reading error
+noti.template.field.get.error=Template's fields reading error
