Added error notification for 'template' services

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -84,3 +84,6 @@ noti.document.create.error=Document creation error
 noti.document.remove.error=Document removing error
 noti.template.get.error=Templates reading error
 noti.template.field.get.error=Template's fields reading error
+noti.template.create.error=Template creation error
+noti.template.update.error=Template updating error
+noti.template.remove.error=Template removing error
