--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -87,3 +87,9 @@ noti.template.field.get.error=Template's fields reading error
 noti.template.create.error=Template creation error
 noti.template.update.error=Template updating error
 noti.template.remove.error=Template removing error
+noti.document.created=Document created successfully
+noti.document.updated=Document updated successfully
+noti.document.removed=Document removed successfully
+noti.template.created=Template created successfully
+noti.template.updated=Template updated successfully
+noti.template.removed=Template removed successfully
