Added document fields i18n prompt

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -93,3 +93,5 @@ noti.document.removed=Document removed successfully
 noti.template.created=Template created successfully
 noti.template.updated=Template updated successfully
 noti.template.removed=Template removed successfully
+form.document.line.prompt=Enter string..
+form.document.area.prompt=Enter text..
