Added entity removing confirmation

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -95,3 +95,8 @@ noti.template.updated=Template updated successfully
 noti.template.removed=Template removed successfully
 form.document.line.prompt=Enter string..
 form.document.area.prompt=Enter text..
+form.confirm.ok=Yes
+form.confirm.cancel=Cancel
+head.window.confirm.remove=Removing confirm
+form.confirm.document.remove.label=Are you sure you want to remove the document?
+form.confirm.template.remove.label=Are you sure you want to remove the template?
