Connection config moved to config.properties

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/config.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/config.properties
@@ -1,4 +1,9 @@
-pattern.subject.length = 40
-time.inactive.interval = 1800
-time.poll.interval = 3000
-warning.limit = 8
+connect.uri=jdbc:h2:mem:sberbank;DB_CLOSE_DELAY=-1
+connect.username=sberbank
+connect.password=sberbank
+connect.initial=2
+connect.max=5
+
+time.inactive.interval=1800
+time.poll.interval=4000
+warning.limit=8
