--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>ru.klapatnyuk</groupId>
     <artifactId>sberbank</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <name>sberbank</name>
 
     <modules>
