--- a/sberbank-logic/pom.xml
+++ b/sberbank-logic/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>sberbank</artifactId>
         <groupId>ru.klapatnyuk</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>ru.klapatnyuk</groupId>
             <artifactId>sberbank-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
