--- a/sberbank-web/pom.xml
+++ b/sberbank-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>sberbank</artifactId>
         <groupId>ru.klapatnyuk</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>ru.klapatnyuk</groupId>
             <artifactId>sberbank-logic</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.1</version>
         </dependency>
     </dependencies>
 
